<resources>
    <string name="app_name">COVID19-Tracker</string>
    <string name="confirmed">Confirmed</string>
    <string name="death">Death</string>
    <string name="recovered">Recovered</string>
    <string name="stat_heading">World Statistics</string>
    <string name="search_country">Search Country</string>
    <string name="list_heading">Countries Affected</string>
    <string name="network_error_message">Please check your internet connection and try again!</string>
    <string name="disclaimer">This is not an official app and the data may vary depending upon the API. For exact numbers, you should rely on a government source.</string>
    <string name="new_cases">New Cases</string>
    <string name="new_deaths">New Deaths</string>
    <string name="active_cases">Active Cases</string>
    <string name="sort">Sort</string>
    <string name="tab_1">Home</string>
    <string name="tab_2">Settings</string>

    <!-- Preference Titles -->
    <string name="sync_header">Notification</string>
    <string name="sync_title">Allow push notification when there\'s new data available</string>
    <string name="pref_key_check">pref_key_check</string>
    <string name="enable_push_notif">Enable Push Notification</string>
    <string name="pref_int1">int1</string>
    <integer name="pref_int1_step">1</integer>
    <integer name="pref_int1_min">0</integer>
    <integer name="pref_int1_max">10</integer>
    <integer name="pref_int1_default">10</integer>
    <string name="int1_title">Set Int 1</string>
    <string name="int1_desc">Change the value of the first integer</string>
    <string name="pref_boolean1">pref_boolean1</string>
    <!-- Preference DropDown -->
    <string name="pref_update">Update Setting</string>
    <string name="choose_update">Click to change</string>
    <string name="one_hour">Every 1 Hour</string>
    <string name="six_hours">Every 6 Hours</string>
    <string name="twelve_hours">Every 12 Hours</string>
    <string name="twenty_four_hours">Every 24 Hours</string>
    <string name="no_Alert">No Alert</string>
    <string-array name="update_choices">
        <item name="no_Alert">@string/no_Alert</item>
        <item name="one_hour">@string/one_hour</item>
        <item name="six_hours">@string/six_hours</item>
        <item name="twelve_hours">@string/twelve_hours</item>
        <item name="twenty_four_hours">@string/twenty_four_hours</item>
    </string-array>

</resources>
