<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/dark_blue"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    tools:context=".ui.activities.DetailsActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/countryNameDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/helvetica"
            android:text="Egypt"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                style="@style/HeadingTextStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/confirmed" />
            <TextView
                android:id="@+id/confirmedCountDetail"
                style="@style/HeadingTextStyle"
                android:fontFamily="@font/helvetica"
                android:textColor="@color/yellow"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/confirmed" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                style="@style/HeadingTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/recovered" />
            <TextView
                android:id="@+id/recoveredCountDetail"
                style="@style/HeadingTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/helvetica"
                android:textColor="@color/green"
                android:text="@string/recovered" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                style="@style/HeadingTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/death" />
            <TextView
                android:id="@+id/deathCountDetail"
                style="@style/HeadingTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/helvetica"
                android:textColor="@color/red"
                android:text="@string/death" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                style="@style/HeadingTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/new_cases" />
            <TextView
                android:id="@+id/newCasesCountDetail"
                style="@style/HeadingTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/new_cases" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                style="@style/HeadingTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/new_deaths" />
            <TextView
                android:id="@+id/newDeathsCountDetail"
                style="@style/HeadingTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/new_deaths" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                style="@style/HeadingTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/active_cases" />
            <TextView
                android:id="@+id/activeCasescountDetail"
                style="@style/HeadingTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/active_cases" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>